# midas-agent

./: .gitignore  README.md  pyproject.toml  run_3issues.py  sweagent_eval.sweagent_eval.json  train.yaml  train_config_evolution.yaml
.github/workflows/: ci.yml
artifacts/checkpoint/: all_preds.jsonl  checkpoint.json  train_config.yaml
experiments/20260418121600/: REPORT.md
experiments/20260419_run7_default_delegate/: artifact.json
logs/: artifact_10issues_100k_context.json  artifact_10issues_16k_context.json  artifact_10issues_minimax.json
logs/sweagent_10issues/: preds.json  run_batch.config.yaml  run_batch_exit_statuses.yaml
logs/sweagent_10issues_minimax/: preds.json  run_batch.config.yaml  run_batch_exit_statuses.yaml
logs/sweagent_13033/: preds.json  run_batch.config.yaml  run_batch_exit_statuses.yaml
logs/sweagent_13033_v2/: predictions.jsonl  predictions_fixed.jsonl  preds.json  run_batch.config.yaml  run_batch_exit_statuses.yaml
midas_agent/: cli.py  config.py  main_training.py  prompts.py  training.py  types.py
midas_agent/context/: compaction.py  environment.py
midas_agent/docker/: container_manager.py
midas_agent/evaluation/: criteria_cache.py  execution_scorer.py  llm_judge.py  module.py  swebench_scorer.py  test_runner.py
midas_agent/inference/: exporter.py  frozen_pricing.py  production_meter.py  runner.py  schemas.py
midas_agent/llm/: litellm_provider.py  provider.py  types.py
midas_agent/observability/: observer.py
midas_agent/runtime/: io_backend.py
midas_agent/scheduler/: adaptive_workspace.py  budget_allocator.py  hiring_manager.py  resource_meter.py  scheduler.py  selection.py  serial_queue.py  storage.py  system_llm.py  training_log.py
midas_agent/stdlib/: action.py  plan_execute_agent.py  react_agent.py
midas_agent/workspace/: base.py  manager.py
tests/integration/: conftest.py  test_action_log_pipeline.py  test_agent_discovery.py  test_budget_selection.py  test_config_evolution.py  test_cross_episode_skill.py  test_delegation_lifecycle.py  test_evaluation_module.py  test_full_episode.py  test_full_pipeline_docker.py  test_graph_emergence.py  test_infer_pipeline.py  (+6 more)
(+320 files in other folders)
